# river-status-bar

./: meson.build
include/: utils.hpp  wayland-state.hpp
include/wayland/: status-bar.hpp  zwlr-layer-shell-wrapper.hpp
src/: main.cpp  utils.cpp  wayland-state.cpp
src/wayland/: zriver-protocol.c  zwlr-layer-shell.c
